# Master-1

./: README.md  dfgb
S1/ERDI/Rapport Stream processing/: Stream processing  Traitement de données en flux.pptx
S1/ISD/TPs/tp1/: Sprint_backlog_4_2.docx  TP1_ISD.ipynb  cor_TP1.ipynb
S1/ISD/TPs/tp2/: TP2_Smail_Aghilas.ipynb  TP2_classification.ipynb  cor_TP2.ipynb
S1/ISD/TPs/tp3/: correction_TP3.ipynb  eucalyptus.txt
S1/ISD/TPs/tp4/: cor_TPbonheur.ipynb  tp4_ISD_bonheur(1).ipynb  tp4bonheur.ipynb
S1/ISD/TPs/tp5/: TP5_BOUDRAA_MUNEZERO.ipynb
S1/ISD/TPs/tp6/: TP6_synthese_correction.ipynb.txt
S1/Reseaux/Project/: dstr.sh  halt.sh  up.sh
S1/Reseaux/Project/VM1/: Vagrantfile
S1/Reseaux/Project/VM1-6/: config.yml
S1/Reseaux/Project/partage/: configure-tun.sh  ext_in.c  ext_out.c  extremite.c  extremite.h  iftun  iftun.c  iftun.h
S1/Reseaux/Project/projet-reseauxm1/: README.md  launch
S1/Reseaux/Project/projet-reseauxm1/partage/src/: CMakeLists.txt  conf_if.sh  el-tunel.c  extremite.c  iftun.c  iftun.h  test_ext_in.c  test_ext_out.c  test_iftun.c  tunnel64d
S1/Reseaux/TPs/TP1/: config1.yml  config2.yml  config3.yml
S1/génie logiciel/TDs/TD1/: Td 1 Génie logiciel.docx  test.txt
S1/génie logiciel/TPs/TP1/: .gitlab-ci.yml  settings.gradle
S1/génie logiciel/TPs/Tp1/: README.md
S2/Aspects probabilistes pour l'informatique/Cours/Cours 1/: Rappel.docx
S2/DPR/Projet/Projet DPR/: converhtml.xsl  (+6 more)
S2/DPR/cours/: livre.xml  livre.xsl
S2/ICQ/DM/: Devoir Maison ICQ.docx  icq_vcq.ipynb
S2/J2E/Projet/: README.dm
S2/VDD/TPs/: exercise-line-charts.ipynb
(+1108 files in other folders)
